# SNAIL

./: BERT_ViPR.html  MANIFEST.in  PCB_articles.txt  README.md  SNAIL.py  dbsoftDB.tsv  eval.human.ascii.html  pyproject.toml  requirements.txt  test1.csv
snail_xgb/: cli.py
snail_xgb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
snail_xgb/data/: best_xgb_model.joblib  bioconductor_packages.txt
