[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snail_xgb"
version = "0.1.0"
description = "XGBoost-based dbsoft detector from HTML/PMC text"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "beautifulsoup4",
  "pandas",
  "scikit-learn",
  "scipy",
  "nltk",
  "spacy",
  "pyenchant",
  "requests",
  "joblib"
]

[project.scripts]
snail-xgb = "snail_xgb.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
snail_xgb = [
  "data/best_xgb_model.joblib",
  "data/dbsoftDB.tsv",
  "data/acronyms.dic",
  "data/bioconductor_packages.txt",
  "data/scowl/*",
  "data/scowl/**"
]
